kubernetes-dashboard-strip-prefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-kubernetes-dashboard-prefix
spec:
  stripPrefix:
    prefixes:
      - /kubernetes-dashboard
    forceSlash: true
