kubernetes-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/kubernetes-dashboard`)
    kind: Rule
    middlewares:
    - name: strip-kubernetes-dashboard-prefix
    services:
    - name: kubernetes-dashboard
      port: 9090
